--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
     <script src="scripts/controllers/about.js"></script>
     <script src="scripts/controllers/recents.js"></script>
     <script src="scripts/controllers/state-detail.js"></script>
+    <script src="scripts/controllers/login.js"></script>
     <!-- endbuild -->
   </body>
 </html>
